--- a/AndroidMaster/app/src/main/res/layout/activity_frame_layout.xml
+++ b/AndroidMaster/app/src/main/res/layout/activity_frame_layout.xml
@@ -1,9 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".layouts.FrameLayoutActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#009688"
+        android:layout_gravity=""/>
+
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#4CAF50"
+        android:layout_gravity="center_horizontal"/>
+
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#8BC34A"
+        android:layout_gravity="end"/>
+
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#673AB7"
+        android:layout_gravity="center_vertical"/>
+
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#3F51B5"
+        android:layout_gravity="center"/>
+
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#2196F3"
+        android:layout_gravity="center|end"/>
+
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#E91E63"
+        android:layout_gravity="bottom"/>
+
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#F44336"
+        android:layout_gravity="bottom|center"/>
+
+    <View
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="#FFAB91"
+        android:layout_gravity="bottom|end"/>
+
+</FrameLayout>
