--- a/AndroidMaster/app/src/main/res/drawable/ic_male.xml
+++ b/AndroidMaster/app/src/main/res/drawable/ic_male.xml
@@ -1,5 +1,9 @@
-<vector android:height="24dp" android:tint="@color/white"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M9.5,11c1.93,0 3.5,1.57 3.5,3.5S11.43,18 9.5,18S6,16.43 6,14.5S7.57,11 9.5,11zM9.5,9C6.46,9 4,11.46 4,14.5S6.46,20 9.5,20s5.5,-2.46 5.5,-5.5c0,-1.16 -0.36,-2.23 -0.97,-3.12L18,7.42V10h2V4h-6v2h2.58l-3.97,3.97C11.73,9.36 10.66,9 9.5,9z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="800dp"
+    android:height="800dp"
+    android:viewportWidth="345.6"
+    android:viewportHeight="345.6">
+  <path
+      android:pathData="M336.84,8.93c-5.96,-5.98 -14.15,-9.17 -22.59,-8.79L211.77,4.76c-16.55,0.75 -29.36,14.77 -28.62,31.32c0.75,16.55 14.79,29.34 31.32,28.62l24.95,-1.13l-32.6,32.6c-21.32,-13.47 -46.05,-20.68 -71.89,-20.68c-36.06,0 -69.96,14.04 -95.46,39.54c-52.64,52.63 -52.64,138.28 0,190.92c25.5,25.5 59.4,39.54 95.46,39.54c36.06,0 69.96,-14.04 95.46,-39.54c45.35,-45.35 51.62,-115.19 18.83,-167.33l32.7,-32.7l-1.2,24.94c-0.79,16.55 11.98,30.61 28.53,31.4c0.49,0.02 0.98,0.04 1.46,0.04c15.91,0 29.17,-12.51 29.94,-28.56l4.9,-102.19C345.97,23.11 342.8,14.9 336.84,8.93zM187.97,263.53c-14.17,14.16 -33,21.97 -53.03,21.97c-20.03,0 -38.87,-7.8 -53.03,-21.97c-29.24,-29.24 -29.24,-76.82 0,-106.07c14.16,-14.16 33,-21.97 53.03,-21.97s38.87,7.8 53.03,21.97C217.21,186.7 217.21,234.28 187.97,263.53z"
+      android:fillColor="#000000"/>
 </vector>
