--- a/AndroidMaster/app/src/main/res/layout/activity_menu.xml
+++ b/AndroidMaster/app/src/main/res/layout/activity_menu.xml
@@ -17,7 +17,6 @@
         android:id="@+id/btnIMCApp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="ImcCalculator" />
+        android:text="Imc App" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
