--- a/AndroidMaster/app/src/main/res/layout/activity_menu.xml
+++ b/AndroidMaster/app/src/main/res/layout/activity_menu.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:text="Imc App" />
 
+    <Button
+        android:id="@+id/btnToDo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="To Do App" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
