--- a/AndroidMaster/app/src/main/res/layout/item_task_category.xml
+++ b/AndroidMaster/app/src/main/res/layout/item_task_category.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/viewContainer"
     android:layout_width="160dp"
     android:layout_height="90dp"
     android:layout_marginHorizontal="8dp"
@@ -12,8 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
         android:layout_margin="8dp"
+        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
@@ -27,10 +28,10 @@
 
         <View
             android:id="@+id/divider"
-            tools:background="@color/white"
-            android:layout_marginTop="4dp"
             android:layout_width="match_parent"
-            android:layout_height="2dp" />
+            android:layout_height="2dp"
+            android:layout_marginTop="4dp"
+            tools:background="@color/white" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
