--- a/AndroidMaster/app/src/main/res/layout/activity_menu.xml
+++ b/AndroidMaster/app/src/main/res/layout/activity_menu.xml
@@ -25,4 +25,10 @@
         android:layout_height="wrap_content"
         android:text="To Do App" />
 
+    <Button
+        android:id="@+id/btnSuperHeroApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SuperHero App" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
