--- a/AndroidMaster/app/src/main/res/layout/activity_menu.xml
+++ b/AndroidMaster/app/src/main/res/layout/activity_menu.xml
@@ -31,4 +31,9 @@
         android:layout_height="wrap_content"
         android:text="SuperHero App" />
 
+    <Button
+        android:id="@+id/btnSettings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Settings" />
 </androidx.appcompat.widget.LinearLayoutCompat>
