--- a/AndroidMaster/app/src/main/res/layout/activity_settings.xml
+++ b/AndroidMaster/app/src/main/res/layout/activity_settings.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Modo oscuro"
-                android:textColor="@color/black" />
+                android:textColor="@color/settings_text_title" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Activar Bluetooth"
-                android:textColor="@color/black" />
+                android:textColor="@color/settings_text_title" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Subir el volumen"
-                android:textColor="@color/black" />
+                android:textColor="@color/settings_text_title" />
 
             <com.google.android.material.slider.RangeSlider
                 android:id="@+id/rsVolume"
@@ -138,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Vibrar en las llamadas"
-            android:textColor="@color/black" />
+            android:textColor="@color/settings_text_title" />
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/switchVibration"
