Migración del proyecto

--- a/HarryPotterApp/app/src/main/res/layout/item_book.xml
+++ b/HarryPotterApp/app/src/main/res/layout/item_book.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/frame_layout_item"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp"
-    app:cardBackgroundColor="@color/hp_negro"
-    app:cardCornerRadius="22dp"
-    app:cardElevation="8dp">
+    android:layout_height="225dp">
 
-    <FrameLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:cardCornerRadius="22dp"
+        app:cardElevation="8dp">
 
         <ImageView
             android:id="@+id/ivBook"
@@ -20,38 +18,60 @@
             android:layout_height="wrap_content"
             android:scaleType="centerCrop" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|end"
-            app:cardCornerRadius="16dp"
-            app:cardUseCompatPadding="true">
+        <ImageView
+            android:id="@+id/ivBookFavorite"
+            style="@style/image_view_favorite_item"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
+
+        <LinearLayout
+            style="@style/linear_layout_info_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvBookTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/apple_butter"
+                    android:gravity="center"
+                    android:textColor="@color/hp_black"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    tools:text="ANTELO97" />
+
+                <TextView
+                    android:id="@+id/tvBookDetails"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="2dp"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/apple_butter"
+                    android:gravity="start"
+                    android:textColor="@color/hp_black"
+                    android:textSize="20sp"
+                    android:textStyle="italic"
+                    android:visibility="gone"
+                    tools:text="ANTELO97" />
+            </LinearLayout>
 
             <ImageView
-                android:id="@+id/ivBookFavorite"
+                android:id="@+id/ivBookDetail"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="#000000"
+                android:layout_gravity="bottom"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginBottom="6dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:src="@drawable/ic_favorite"
-                app:tint="@color/white" />
-        </androidx.cardview.widget.CardView>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="bottom"
-            android:background="@color/hp_marron_claro">
-
-            <TextView
-                android:id="@+id/tvBookTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/hp_negro"
-                android:textSize="20sp"
-                tools:text="ANTELO97" />
-        </FrameLayout>
-    </FrameLayout>
-</androidx.cardview.widget.CardView>
+                android:src="@drawable/ic_more_info"
+                app:tint="@color/hp_black" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</FrameLayout>
