--- a/HarryPotterApp/app/src/main/res/layout/activity_main.xml
+++ b/HarryPotterApp/app/src/main/res/layout/activity_main.xml
@@ -4,39 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context=".ui.view.MainActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/main_content"
-        android:layout_width="match_parent"
+        android:id="@+id/fragmentContainer"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/bg_rect_lin_grad_brown"
         android:fitsSystemWindows="true"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Other views -->
+    <ProgressBar
+        android:id="@+id/pbLoadingMain"
+        style="@style/progress_bar"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
+    <!-- El paddingTop afecta al icon -->
+    <!-- Es paddingBottom afecta al text -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/hp_negro"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="75dp"
+        android:background="@drawable/bg_rect_lin_grad_black"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        app:itemBackground="@drawable/sel_bnv_item_background"
+        app:itemIconTint="@drawable/sel_bnv_item_color"
+        app:itemTextColor="@drawable/sel_bnv_item_color"
+        app:labelVisibilityMode="selected"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
-
+        app:layout_constraintTop_toBottomOf="@id/fragmentContainer"
+        app:menu="@menu/bottom_navigation_view_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
