--- a/HarryPotterApp/app/src/main/res/layout/fragment_books.xml
+++ b/HarryPotterApp/app/src/main/res/layout/fragment_books.xml
@@ -4,71 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/hp_marron_oscuro"
+    android:background="@drawable/bg_rect_lin_grad_brown"
     tools:context=".ui.view.fragment.BooksFragment">
 
     <TextView
         android:id="@+id/tvTitleBooks"
+        style="@style/text_view_titles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20sp"
-        android:layout_marginVertical="30sp"
-        android:background="@drawable/bg_textview_titles"
-        android:fontFamily="@font/font_harry_potter"
-        android:gravity="center"
-        android:letterSpacing="0.1"
-        android:paddingVertical="10sp"
         android:text="@string/books"
-        android:textColor="@color/hp_negro"
-        android:textSize="60sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/pbBooks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/filters" />
-
     <LinearLayout
-        android:id="@+id/ll"
+        android:id="@+id/linearLayout1"
+        style="@style/linear_layout_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20sp"
-        android:layout_marginTop="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitleBooks">
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/svBooks"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_textview_titles"
-            app:iconifiedByDefault="false"
+            style="@style/search_view"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="0.6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTitleBooks" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabFav"
-            android:layout_width="wrap_content"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/mbtnFavBooks"
+            style="@style/matterial_button"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:scaleType="center"
-            android:elevation="200dp"
-            android:src="@drawable/ic_favorite"
-            app:backgroundTint="@color/black"
-            app:fabCustomSize="40dp"
-            app:tint="@color/hp_oro" />
+            android:layout_marginHorizontal="6dp"
+            android:layout_weight="0.2"
+            android:text="@string/fav"
+            app:cornerRadius="20dp"
+            app:strokeWidth="4dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/mbtnAllBooks"
+            style="@style/matterial_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:text="@string/all"
+            app:cornerRadius="20dp"
+            app:strokeWidth="4dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -77,11 +65,11 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="20sp"
         android:layout_marginTop="15sp"
-        android:background="@color/hp_negro"
+        android:background="@color/hp_black"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll" />
+        app:layout_constraintTop_toBottomOf="@id/linearLayout1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBooks"
@@ -91,7 +79,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/filters"
-        tools:background="@color/hp_rojo_oscuro" />
+        app:layout_constraintTop_toBottomOf="@id/filters" />
 
+    <ProgressBar
+        android:id="@+id/pbBooks"
+        style="@style/progress_bar"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/filters" />
 </androidx.constraintlayout.widget.ConstraintLayout>
