--- a/HarryPotterApp/app/src/main/res/values/colors.xml
+++ b/HarryPotterApp/app/src/main/res/values/colors.xml
@@ -8,12 +8,21 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    // HarryPotterApp
-    <color name="hp_rojo_oscuro">#740001</color>
-    <color name="hp_oro">#D3A625</color>
-    <color name="hp_marron_oscuro">#6A3A19</color>
-    <color name="hp_marron_claro">#B48A76</color>
-    <color name="hp_verde_oscuro">#00543D</color>
-    <color name="hp_azul_grisaceo">#5A7D8F</color>
-    <color name="hp_negro">#000000</color>
+    <!-- HarryPotterApp -->
+    <color name="hp_black">#000000</color>
+    <color name="hp_black_opacity_75">#BF000000</color>
+    <color name="hp_black_opacity_50">#80000000</color>
+    <color name="hp_white">#FFFFFFFF</color>
+    <color name="hp_transparent">#0041ABFF</color>
+    <color name="hp_gold">#D3A625</color>
+    <color name="hp_gold_opacity_50">#80D3A625</color>
+    <color name="hp_dark_brown">#6A3A19</color>
+    <color name="hp_light_brown">#B48A76</color>
+    <color name="hp_light_brown_opacity_80">#CCB48A76</color>
+    <color name="hp_light_brown_opacity_50">#80B48A76</color>
+    <color name="hp_ic_details">#41ABFF</color>
+
+    <color name="hp_dark_red">#740001</color>
+    <color name="hp_dark_green">#00543D</color>
+    <color name="hp_greyish_blue">#5A7D8F</color>
 </resources>
