--- a/HarryPotterApp/app/src/main/res/values/themes.xml
+++ b/HarryPotterApp/app/src/main/res/values/themes.xml
@@ -10,7 +10,20 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/hp_negro</item>
+        <item name="android:statusBarColor">@color/hp_black</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <!-- HarryPotterApp -->
+    <style name="progress_bar">
+        <item name="android:layout_width">125dp</item>
+        <item name="android:layout_height">125dp</item>
+    </style>
+
+    <style name="search_view">
+        <item name="android:background">@drawable/bg_rect_lin_grad_yellow_str_plus_corn</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:iconifiedByDefault">false</item>
+        <item name="android:layout_gravity">center_vertical</item>
     </style>
 </resources>
