--- a/HarryPotterApp/app/src/main/res/layout/activity_main.xml
+++ b/HarryPotterApp/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragmentContainer"
         app:menu="@menu/bottom_navigation_view_menu" />
+
+    <View
+        android:id="@+id/viewLoadingMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/hp_black_opacity_50"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
