--- a/HarryPotterApp/app/src/main/res/layout/fragment_books.xml
+++ b/HarryPotterApp/app/src/main/res/layout/fragment_books.xml
@@ -75,11 +75,12 @@
         android:id="@+id/rvBooks"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="20sp"
+        android:layout_margin="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/filters" />
+        app:layout_constraintTop_toBottomOf="@id/filters"
+        tools:background="@color/hp_gold" />
 
     <ProgressBar
         android:id="@+id/pbBooks"
