--- a/HarryPotterApp/app/src/main/res/values-v26/themes.xml
+++ b/HarryPotterApp/app/src/main/res/values-v26/themes.xml
@@ -52,4 +52,33 @@
         <item name="android:orientation">horizontal</item>
         <item name="android:padding">6dp</item>
     </style>
+
+    <style name="text_view_names">
+        <item name="android:fontFamily">@font/apple_butter</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/hp_black</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_view_details">
+        <item name="android:layout_marginVertical">2dp</item>
+        <item name="android:layout_marginStart">5dp</item>
+        <item name="android:fontFamily">@font/apple_butter</item>
+        <item name="android:gravity">start</item>
+        <item name="android:textColor">@color/hp_black</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="image_view_details_item">
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:layout_marginHorizontal">5dp</item>
+        <item name="android:layout_marginBottom">6dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:src">@drawable/ic_more_info</item>
+        <item name="android:tint">@color/hp_black</item>
+    </style>
 </resources>
